[package]
name = "serde-hjson"
version = "0.0.1"
authors = ["Christian Zangl <laktak@cdak.net>", "Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/laktak/hjson-rust"
#documentation = "https://laktak.github.io/hjson-rust/"
readme = "../README.md"
keywords = ["hjson", "json", "serde", "serialization"]

[features]
nightly-testing = ["clippy"]

[dependencies]
clippy = { version = "^0.*", optional = true }
lazy_static = "^0.2"
linked-hash-map = { version = "0.0.11", features = [ "serde_impl" ] }
num = { version = "~0.1.27", default-features = false }
regex = "^0.1"
serde = "^0.7.0"
