[package]
name = "serde-hjson"
version = "0.10.0"
authors = ["Christian Zangl <laktak@cdak.net>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/hjson/hjson-rust"
#documentation = "https://hjson.github.io/hjson-rust/"
readme = "../README.md"
keywords = ["hjson", "json", "serde", "serialization"]

[features]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl"]
default = ["preserve_order"]

[dependencies]
serde = "1.0"
num-traits = "0.2"
regex = "1.0"
lazy_static = "1"
linked-hash-map = { version = "0.5", optional = true }
