[package]
name = "hjson"
version = "0.8.2"
authors = ["Christian Zangl <laktak@cdak.net>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/hjson/hjson-rust"
keywords = ["hjson", "json", "serde", "serialization"]

[dependencies]
docopt = "1.1"
serde = "1.0"
serde_json = "1.0"
serde-hjson = { version = "0.10", path = "../hjson" }

[[bin]]
name = "hjson"
