[package]
name = "hjson"
version = "0.8.2"
authors = ["Christian Zangl <laktak@cdak.net>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/hjson/hjson-rust"
keywords = ["hjson", "json", "serde", "serialization"]

[dependencies]
serde = "1.0"
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "0.10", path = "../hjson" }

[[bin]]
name = "hjson"
