[package]
name = "hjson"
version = "1.0.0"
authors = ["Christian Zangl <laktak@cdak.net>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/hjson/hjson-rust"
keywords = ["hjson", "json", "serde", "serialization"]

[dependencies]
serde = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "1.0", path = "../hjson" }

[[bin]]
name = "hjson"
