[package]
name = "serde-hjson-tests"
version = "0.8.2"
authors = ["Christian Zangl <laktak@cdak.net>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
skeptic = "0.13"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "*", path = "../hjson" }
skeptic = "0.13"

[[test]]
name = "test"
path = "tests/test.rs"
