[package]
name = "serde-hjson-tests"
version = "1.0.0"
authors = ["Christian Zangl <laktak@cdak.net>"]
edition = "2018"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "*", path = "../hjson" }

[[test]]
name = "test"
path = "tests/test_hjson.rs"
